[gd_scene load_steps=21 format=3 uid="uid://1vunygl4wpj6"]

[ext_resource type="Script" uid="uid://nejfw5t8xub5" path="res://scenes/game_elements/props/button_item/components/button_item.gd" id="1_14phb"]
[ext_resource type="Texture2D" uid="uid://dpaqpkkj38f16" path="res://scenes/game_elements/props/button_item/components/button-yellow.png" id="1_i5psm"]
[ext_resource type="Texture2D" uid="uid://dlpjjca2udf42" path="res://scenes/game_elements/props/button_item/components/button-shadow.png" id="2_14phb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_14phb"]
atlas = ExtResource("1_i5psm")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wx015"]
atlas = ExtResource("1_i5psm")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e133b"]
atlas = ExtResource("1_i5psm")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eonoi"]
atlas = ExtResource("1_i5psm")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_6ba1g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_14phb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wx015")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e133b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eonoi")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ooa8j"]
atlas = ExtResource("2_14phb")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3nx5"]
atlas = ExtResource("2_14phb")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7soc"]
atlas = ExtResource("2_14phb")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtp0c"]
atlas = ExtResource("2_14phb")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_vorhs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ooa8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3nx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7soc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtp0c")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_14phb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtonSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ButtonSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ShadowSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_i5psm"]
resource_name = "default"
length = 0.7
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtonSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 2, 1, 0, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ButtonSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ShadowSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 2, 1, 0, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wx015"]
_data = {
&"RESET": SubResource("Animation_14phb"),
&"default": SubResource("Animation_i5psm")
}

[sub_resource type="Animation" id="Animation_e133b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtonSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -24)]
}

[sub_resource type="Animation" id="Animation_wx015"]
resource_name = "up-down"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtonSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(0, -24), Vector2(0, -32), Vector2(0, -24)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eonoi"]
_data = {
&"RESET": SubResource("Animation_e133b"),
&"up-down": SubResource("Animation_wx015")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_i5psm"]
radius = 30.0167

[node name="ButtonItem" type="Node2D"]
script = ExtResource("1_14phb")

[node name="ButtonSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -24)
sprite_frames = SubResource("SpriteFrames_6ba1g")
autoplay = "default"

[node name="ShadowSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -24)
sprite_frames = SubResource("SpriteFrames_vorhs")
autoplay = "default"

[node name="FrameByFrameAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wx015")
}
autoplay = "default"

[node name="UpDownAnimation" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_eonoi")
}
autoplay = "up-down"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -24)
shape = SubResource("CircleShape2D_i5psm")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
